// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Users Details Modal 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="basicModal"
  className="modal fade"
  id="basicModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
          id="myModalLabel"
        >
          User Details
        </h4>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          State:
          <u />
        </p>
        <p>
          City:
          <u />
        </p>
        <p>
          Street:
          <u />
        </p>
        <p>
          Postcode:
          <u />
        </p>
        <p>
          Phone:
          <u />
        </p>
        <p>
          Cell:
          <u />
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-default"
          data-dismiss="modal"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Users Details Modal with props 1`] = `
<div
  aria-hidden="true"
  aria-labelledby="basicModal"
  className="modal fade"
  id="basicModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
          id="myModalLabel"
        >
          User Details
        </h4>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <p>
          State:
          <u>
            California
          </u>
        </p>
        <p>
          City:
          <u>
            Los Angeles
          </u>
        </p>
        <p>
          Street:
          <u>
            Queens Boulevard
          </u>
        </p>
        <p>
          Postcode:
          <u>
            123456
          </u>
        </p>
        <p>
          Phone:
          <u>
            555-333
          </u>
        </p>
        <p>
          Cell:
          <u>
            333-555
          </u>
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-default"
          data-dismiss="modal"
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
